# rust_actix_crud_app

./: .gitignore  Cargo.toml  README.md
src/: main.rs
templates/: index.html
