[package]
name = "rust_actix_crud_app"
version = "0.1.0"
authors = ["YA <YA-androidapp@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"
thiserror = "1.0.22"
